# vortex

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md
Core/: CMakeLists.txt  Core.cmake
Core/Core/: Application.cpp  Application.h  CommonRuntime.cpp  CommonRuntime.h  Controller.cpp  Controller.h  DLLSupport.h  Framework.cpp  Framework.h  GlobalRuntime.cpp  GlobalRuntime.h  GlobalRuntime.hpp  Host.cpp  Host.h  Interfaces.h  Logging.cpp  Logging.h  Router.cpp  Router.h  User.cpp  User.h  View.cpp  View.h  VortexBase.cpp  VortexBase.hpp
Core/Core/Applications/: Application.cpp  Application.hpp  Routing.cpp  Routing.hpp
Core/Core/Cache/: Cache.cpp  Cache.h  ICacheBackend.h
Core/Core/Cache/Backends/: DummyCacheBackend.h  MemoryCacheBackend.cpp  MemoryCacheBackend.h  RedisBackend.cpp  RedisBackend.h
Core/Core/Caching/: Cache.cpp  Cache.h  Cache.hpp
Core/Core/Caching/Backends/: DummyCacheBackend.cpp  DummyCacheBackend.h  DummyCacheBackend.hpp  MemoryCacheBackend.cpp  MemoryCacheBackend.h  MemoryCacheBackend.hpp  RedisBackend.cpp  RedisBackend.h  RedisBackend.hpp
Core/Core/Exception/: FrameworkExitException.cpp  FrameworkExitException.h  StorageException.h
Core/Core/Exceptions/: CacheException.cpp  CacheException.h  CacheException.hpp  ExitFrameworkException.hpp  ScriptException.cpp  ScriptException.h  ScriptException.hpp  StorageException.cpp  StorageException.h  StorageException.hpp  VortexException.cpp  VortexException.h  VortexException.hpp
Core/Core/Modules/: DependencyInjection.cpp  DependencyInjection.h  DependencyInjection.hpp  Module.h  Module.hpp  ModuleLoader.cpp  ModuleLoader.h  ModuleLoader.hpp  Plugin.cpp  Plugin.h  Plugin.hpp
Core/Core/Script/: DeltaScriptEngine.cpp  DeltaScriptEngine.h  Duktape.cpp  DuktapeEngine.cpp  DuktapeEngine.h  DummyEngine.cpp  DummyEngine.h  IScriptEngine.h  Script.cpp  Script.h
Core/Core/Storage/: IStorageBackend.h  Storage.cpp  Storage.h  Storage.hpp
Core/Core/Storage/Filesystem/: FilesystemBackend.cpp  FilesystemBackend.h  FilesystemBackend.hpp
Core/Core/Storage/Mongo/: Collection.cpp  Collection.h  Collection.hpp  Db.cpp  Db.h  Db.hpp  Mongo.cpp  Mongo.h  Mongo.hpp  MongoBackend.cpp  MongoBackend.h  MongoBackend.hpp
Core/Core/Util/: Hash.cpp  Hash.h  Hash.hpp  Password.cpp  Password.h  Password.hpp  Random.cpp  Random.h  Random.hpp  String.cpp  String.h  String.hpp  Time.cpp  Time.h  Time.hpp
Core/Core/VortexModule/: Application.cpp  Application.h  Controller.cpp  Controller.h  Framework.cpp  Framework.h  Host.cpp  Host.h  Router.cpp  Router.h  View.cpp  View.h
Core/Core/VortexModule/Script/: DeltaScriptEngine.cpp  DeltaScriptEngine.h  DuktapeEngine.cpp  DuktapeEngine.h  DummyEngine.cpp  DummyEngine.h  Script.cpp  Script.h
Core/include/Core/: Application.h  CommonRuntime.h  Controller.h  Framework.h  View.h
Core/include/Core/Cache/: Cache.h  ICacheBackend.h  Redis.h
Core/include/Core/Exception/: CacheException.h  VortexException.h
Core/include/Core/Script/: Duktape.h  Script.h
Core/include/Core/Storage/: IStorageBackend.h  Storage.h
Core/src/Core/: Application.cpp  CommonRuntime.cpp  Controller.cpp  Host.cpp  Router.cpp  View.cpp
Core/src/Core/Cache/: Cache.cpp  Redis.cpp
Core/src/Core/Exception/: CacheException.cpp  StorageException.cpp  VortexException.cpp
Core/src/Core/GraphQL/: GraphQL.cpp
Core/src/Core/Script/: Duktape.cpp
Core/src/Core/Storage/: Storage.cpp
Core/src/Core/Util/: Hash.cpp  Time.cpp
Server/: CMakeLists.txt  Server.cmake
Server/Server/: DLLSupport.h  DLLSupport.hpp
Server/Server/Http/: HttpListener.cpp  HttpListener.h  HttpListener.hpp  HttpServer.cpp  HttpServer.h  HttpServer.hpp  HttpSession.cpp  HttpSession.h  HttpSession.hpp
Server/include/Server/Http/: HttpServer.h
Vortex/: CMakeLists.txt  Vortex.cmake  main.cpp
Vortex/Vortex/: Vortex.cpp  Vortex.h
Vortex/include/Vortex/: Vortex.h
VortexFramework/: CMakeLists.txt  VortexFramework.cmake
VortexFramework/VortexFramework/: Application.cpp  Application.h  Controller.cpp  Controller.h  Framework.cpp  Framework.h  Host.cpp  Host.h  Router.cpp  Router.h  View.cpp  View.h  VortexModule.cpp  VortexModule.h
VortexFramework/VortexFramework/Script/: DeltaScriptEngine.cpp  DeltaScriptEngine.h  DuktapeEngine.cpp  DuktapeEngine.h  DummyEngine.cpp  DummyEngine.h  Script.cpp  Script.h
core/: CMakeLists.txt  core.cmake
core/include/Core/: Application.h  Framework.h  Host.h  View.h
core/include/core/: controller.h  framework.h  router.h  view.h
core/include/core/mongo/: db.h  (+2 more)
core/include/framework/: framework.h
core/src/Core/: Application.cpp  Controller.cpp  Framework.cpp  Host.cpp  Router.cpp  View.cpp
core/src/core/: controller.cpp  framework.cpp  host.cpp  router.cpp
maze/: CMakeLists.txt  LICENSE  README.md  maze.cmake
maze/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
maze/include/maze/: array.h  element.h  helpers.h  mazeArray.h  mazeElement.h  mazeObject.h  mazeType.h  maze_array.h  maze_element.h  maze_object.h  maze_type.h  object.h  type.h
maze/src/maze/: array.cpp  element.cpp  helpers.cpp  mazeArray.cpp  mazeElement.cpp  mazeObject.cpp  mazeType.cpp  maze_array.cpp  maze_element.cpp  maze_object.cpp  maze_type.cpp  object.cpp  type.cpp
samples/MinimalModuleSample/: CMakeLists.txt  Module.cmake  Module.cpp  Module.h
samples/MinimalModuleSample/Plugins/: SamplePlugin.cpp  SamplePlugin.h
samples/VortexDbApp/: CMakeLists.txt  DbAppModule.cpp  DbAppModule.h  VortexDbApp.cmake
samples/VortexDbApp/Plugins/: DbApplicationPlugin.cpp  DbApplicationPlugin.h  DbControllerPlugin.cpp  DbControllerPlugin.h  DbHostPlugin.cpp  DbHostPlugin.h  DbRouterPlugin.cpp  DbRouterPlugin.h  DbSitePlugin.cpp  DbSitePlugin.h  DbViewPagePlugin.cpp  DbViewPagePlugin.h  DbViewTemplatePlugin.cpp  DbViewTemplatePlugin.h
server/: CMakeLists.txt  server.cmake
vortex/: CMakeLists.txt  vortex.cmake
vortex/include/Vortex/: Vortex.h
vortex/include/vortex/: vortex.h
vortex/src/: main.cpp
vortex/src/Vortex/: Vortex.cpp
vortex/src/vortex/: vortex.cpp
(+164 files in other folders)
